--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,6 +3,7 @@
 # @johanhoffman will be requested for
 # review when someone opens a pull request.
 *       @johanhoffman
+*       @ashishbhole
 
 # Order is important; the last matching pattern takes the most
 # precedence. When someone opens a pull request that only
